@@ -969,6 +969,8 @@
 8002,0,0,0,40000:35000:30000:25000:20000,0
 //-- HLIF_CHANGE
 8004,0,0,0,60000:180000:300000,600000:900000:1200000
+//-- HAMI_CASTLE
+8005,0,0,0,0,60000:70000:80000:90000:129000
 //-- HAMI_DEFENCE
 8006,0,0,0,40000:35000:30000:25000:20000,30000
 //-- HAMI_BLOODLUST
